--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.naldana.dummydictionary">
+    package="com.rivas.dummydictionary">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name="com.rivas.dummydictionary.DummyDictionaryApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DummyDictionary">
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name="com.rivas.dummydictionary.ui.login.LoginActivity"
+            android:exported="true"
+            android:theme="@style/Theme.DummyDictionary.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.rivas.dummydictionary.MainActivity"
+            android:exported="true" />
     </application>
-
 </manifest>
